[package]
name = "parallel"
version = "0.0.1"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
description = "Command-line CPU load balancer for executing jobs in parallel"
repository = "https://github.com/mmstick/parallel"
keywords = ["cli", "parallel", "cpu", "load", "balancer"]
readme = "README.md"

[dependencies]
num_cpus = "1.0"

[profile.release]
lto = true
opt-level = 3
