[package]
name = "parallel"
version = "0.11.3"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
description = "Command-line CPU load balancer for executing jobs in parallel"
repository = "https://github.com/mmstick/parallel"
keywords = ["cli", "parallel", "cpu", "load", "balancer"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
itoa         = "0.3"
numtoa       = "0.0"
num_cpus     = "1.5"
permutate    = "0.3"
arrayvec     = "0.4"
time         = "0.1"
smallvec     = "0.6"
sys-info     = "0.5"
wait-timeout = "0.1"
